add cookies and context files

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "sass": "^1.45.1",
+    "sfcookies": "^1.0.2",
     "styled-components": "^5.3.3",
     "uuid": "^8.3.2"
   },
