--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-art": "^17.0.2",
     "react-bootstrap": "^2.0.4",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-material-ui-carousel": "^3.1.1",
     "react-native": "^0.66.4",
